# scrcpy_obs_plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  control_msg.cpp  control_msg.h  controller.cpp  controller.h  srccpy-plugin-main.cpp  srccpy.cpp  srccpy.hpp
adb/: adb.cpp  adb.h  adb_device.h  adb_parser.cpp  adb_parser.h  adb_tunnel.cpp  adb_tunnel.h
codec/: demuxer.cpp  demuxer.h  packet_merge.cpp  packet_sink.cpp  packet_source.cpp
data/locale/: en-US.ini  zh-CN.ini
data/server/: scrcpy-server
server/: sc_server_cmd_builder.cpp  server.cpp  server.hpp
src/: control_msg.h  controller.cpp  device.cpp  srccpy-plugin-main.cpp  srccpy.cpp  srccpy.hpp
src/adb/: adb.cpp  adb.h  adb_tunnel.h
src/codec/: demuxer.cpp  packet_sink.cpp  packet_sink.h  packet_source.h
src/server/: sc_server_cmd_builder.cpp  scrcpy-server  server.cpp  server.hpp
src/ui/: pairing-dialog.cpp  pairing-dialog.h
src/util/: options.h  rand.h  sc_file.cpp  sc_intr.cpp  sc_intr.h  sc_log.cpp  sc_log.h  sc_process.cpp  sc_process.h  str_util.h
util/: binary.h  common.h  net.cpp  net.h  options.cpp  options.h  process_intr.h  rand.cpp  sc_intr.cpp  sc_intr.h  sc_log.cpp  sc_log.h  sc_process.cpp  sc_process.h  sc_thread.cpp  sc_thread.h  str_util.h  tick.cpp  tick.h
